@@ -1,3 +1,4 @@
+* Call getter function when accessing Function field on unsaved record
 * Add language configuration wizard
 * Allow copying attachments and notes to created records
 * Add link button on form
